--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/swimlane/ngx-charts.git"
+    "url": "git+https://github.com/swimlane/ngx-chart-dag.git"
   },
   "keywords": [
     "angular2",
@@ -155,7 +155,7 @@
     "zone.js": "^0.7.6"
   },
   "dependencies": {
-    "@swimlane/ngx-charts": "^4.1.2",
+    "@swimlane/ngx-charts": "^4.1.3",
     "dagre": "^0.7.4"
   }
 }
