--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean:build": "rimraf build",
     "clean:dist": "rimraf dist",
     "clean:release": "rimraf release",
-    "build": "webpsack --display-error-details",
+    "build": "webpack --display-error-details",
     "build:release": "cross-env NODE_ENV=production npm run build",
     "build:package": "cross-env NODE_ENV=package npm run build",
     "build:ts": "tsc",
