--- a/package.json
+++ b/package.json
@@ -72,53 +72,49 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts-dag#readme",
   "peerDependencies": {
-    "@angular/common": "~2.4.5",
-    "@angular/compiler": "~2.4.5",
-    "@angular/core": "~2.4.5",
-    "@angular/platform-browser": "~2.4.5",
-    "@angular/platform-browser-dynamic": "~2.4.5",
-    "core-js": "2.4.1",
-    "d3": "4.2.2",
-    "rxjs": "5.0.3",
-    "zone.js": "^0.7.6"
+    "@angular/common": "~4.0.1",
+    "@angular/core": "~4.0.1",
+    "d3": "^4.2.2",
+    "rxjs": "^5.0.3"
   },
   "devDependencies": {
-    "@angular/common": "~2.4.5",
-    "@angular/compiler": "~2.4.5",
-    "@angular/compiler-cli": "~2.4.5",
-    "@angular/core": "~2.4.5",
-    "@angular/forms": "~2.4.5",
-    "@angular/platform-browser": "~2.4.5",
-    "@angular/platform-browser-dynamic": "~2.4.5",
-    "@angular/platform-server": "~2.4.5",
+    "@angular/animations": "~4.0.1",
+    "@angular/common": "~4.0.1",
+    "@angular/compiler": "~4.0.1",
+    "@angular/compiler-cli": "~4.0.1",
+    "@angular/core": "~4.0.1",
+    "@angular/forms": "~4.0.1",
+    "@angular/platform-browser": "~4.0.1",
+    "@angular/platform-browser-dynamic": "~4.0.1",
+    "@angular/platform-server": "~4.0.1",
     "@types/core-js": "^0.9.35",
-    "@types/d3-array": "0.0.3",
-    "@types/d3-brush": "0.0.3",
-    "@types/d3-color": "0.0.3",
-    "@types/d3-format": "0.0.3",
-    "@types/d3-interpolate": "0.0.4",
-    "@types/d3-scale": "0.0.3",
-    "@types/d3-selection": "0.0.3",
-    "@types/d3-shape": "0.0.4",
+    "@types/d3-array": "1.1.0",
+    "@types/d3-brush": "1.0.6",
+    "@types/d3-color": "1.0.4",
+    "@types/d3-format": "1.1.0",
+    "@types/d3-interpolate": "1.1.5",
+    "@types/d3-scale": "1.0.7",
+    "@types/d3-selection": "1.0.12",
+    "@types/d3-shape": "1.0.8",
     "@types/d3-time-format": "2.0.4",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.7.0",
-    "awesome-typescript-loader": "~3.0.0-beta.10",
+    "awesome-typescript-loader": "~3.1.2",
     "clean-webpack-plugin": "^0.1.15",
-    "codelyzer": "0.0.28",
+    "codelyzer": "^3.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
     "core-js": "2.4.1",
     "cpx": "^1.5.0",
     "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
-    "d3": "4.2.2",
+    "css-loader": "^0.27.3",
+    "d3": "^4.2.2",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.10.1",
     "fs-extra": "^2.0.0",
     "gh-pages": "^0.12.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
-    "istanbul-instrumenter-loader": "^1.2.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -136,26 +132,26 @@
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
     "rxjs": "^5.0.3",
-    "sass-loader": "^4.1.1",
-    "source-map-loader": "^0.1.6",
-    "style-loader": "^0.13.1",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.14.1",
     "to-string-loader": "^1.1.5",
-    "ts-helpers": "1.1.1",
+    "ts-helpers": "1.1.2",
     "tslint": "^4.0.2",
     "tslint-config-swimlane": "^2.0.1",
     "tslint-loader": "^3.3.0",
-    "typescript": "~2.0.10",
+    "typescript": "~2.1.0",
     "uglify-js": "^2.7.5",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^2.2.0",
-    "webpack-merge": "^2.4.0",
+    "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "@swimlane/ngx-charts": "^4.2.1",
+    "@swimlane/ngx-charts": "^5.0.0",
     "dagre": "^0.7.4"
   }
 }
