--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-charts-dag",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A Directec Acyclic Graph visualization for angular!",
   "main": "release/index.js",
   "typings": "release/index.d.ts",
@@ -24,16 +24,15 @@
     "build:aot": "ngc",
     "build:sass": "node-sass -r build/ -o build/",
     "build:css": "postcss --use autoprefixer dist/*.css -d dist/",
-    "copy:build": "cp -R src build",
-    "copy:styles": "cpx 'build/**/*.css' release",
+    "copy:build": "cpx \"src/**/*\" build",
+    "copy:styles": "cpx \"build/**/*.css\" release",
     "watch": "webpack --display-error-details --watch",
     "start": "webpack-dev-server",
     "start:hmr": "webpack-dev-server --env.HMR",
     "release": "npm-run-all build:release",
-    "package": "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:replace package:minify copy:styles clean:build",
+    "package": "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
     "package:ts": "tsc --outDir release",
     "package:aot": "ngc -p tsconfig-aot.json",
-    "package:replace": "node ./config/replace.js",
     "package:replace-scss": "node ./config/replace-scss.js",
     "package:minify": "uglifyjs release/index.js --source-map release/index.min.js.map --source-map-url release/index.js.map --compress --mangle --screw-ie8 --output release/index.min.js",
     "deploy": "node ./config/deploy.js",
@@ -74,7 +73,7 @@
   "peerDependencies": {
     "@angular/common": "~4.0.1",
     "@angular/core": "~4.0.1",
-    "d3": "^4.2.2",
+    "d3": "^4.7.4",
     "rxjs": "^5.0.3"
   },
   "devDependencies": {
@@ -90,12 +89,17 @@
     "@types/d3-array": "1.1.0",
     "@types/d3-brush": "1.0.6",
     "@types/d3-color": "1.0.4",
+    "@types/d3-force": "1.0.6",
     "@types/d3-format": "1.1.0",
+    "@types/d3-hierarchy": "1.1.0",
     "@types/d3-interpolate": "1.1.5",
     "@types/d3-scale": "1.0.7",
     "@types/d3-selection": "1.0.12",
     "@types/d3-shape": "1.0.8",
+    "@types/d3-time": "1.0.5",
     "@types/d3-time-format": "2.0.4",
+    "@types/d3-transition": "1.0.7",
+    "@types/jasmine": "2.5.41",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.7.0",
     "awesome-typescript-loader": "~3.1.2",
@@ -106,7 +110,7 @@
     "cpx": "^1.5.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.27.3",
-    "d3": "^4.2.2",
+    "d3": "^4.7.4",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.1",
     "fs-extra": "^2.0.0",
