--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,13 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
+    "lib": [
+      "es2016",
+      "dom"
+    ],
     "moduleResolution": "node",
+    "declaration": true,
     "noEmitHelpers": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -18,10 +23,7 @@
     "suppressExcessPropertyErrors": true,
     "suppressImplicitAnyIndexErrors": true,
     "outDir": "dist",
-    "lib": [
-      "es2016",
-      "dom"
-    ]
+    "declarationDir": "release"
   },
   "files": [
     "src/declarations.d.ts",
@@ -37,6 +39,6 @@
   },
   "angularCompilerOptions": {
     "genDir": "release/",
-    "skipMetadataEmit": false
+    "skipTemplateCodegen": true
   }
 }
