--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
+    "lib": [
+      "es2016",
+      "dom"
+    ],
     "moduleResolution": "node",
     "declaration": true,
     "noEmitHelpers": false,
@@ -19,11 +23,7 @@
     "suppressExcessPropertyErrors": true,
     "suppressImplicitAnyIndexErrors": true,
     "outDir": "release",
-    "declarationDir": "release",
-    "lib": [
-      "es2016",
-      "dom"
-    ]
+    "declarationDir": "release"
   },
   "files": [
     "build/declarations.d.ts",
@@ -40,6 +40,6 @@
   },
   "angularCompilerOptions": {
     "genDir": "release/",
-    "skipMetadataEmit": false
+    "skipTemplateCodegen": true
   }
 }
