chore(*): update deps and use new optimizations

--- a/package.json
+++ b/package.json
@@ -77,15 +77,15 @@
     "rxjs": "^5.0.3"
   },
   "devDependencies": {
-    "@angular/animations": "~4.0.1",
-    "@angular/common": "~4.0.1",
-    "@angular/compiler": "~4.0.1",
-    "@angular/compiler-cli": "~4.0.1",
-    "@angular/core": "~4.0.1",
-    "@angular/forms": "~4.0.1",
-    "@angular/platform-browser": "~4.0.1",
-    "@angular/platform-browser-dynamic": "~4.0.1",
-    "@angular/platform-server": "~4.0.1",
+    "@angular/animations": "^4.2.4",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/platform-server": "^4.2.4",
     "@types/d3-array": "1.1.0",
     "@types/d3-brush": "1.0.6",
     "@types/d3-color": "1.0.4",
@@ -108,13 +108,13 @@
     "copy-webpack-plugin": "^4.0.0",
     "core-js": "2.4.1",
     "cpx": "^1.5.0",
-    "cross-env": "^3.1.4",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.27.3",
     "d3": "^4.7.4",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.1",
-    "fs-extra": "^2.0.0",
-    "gh-pages": "^0.12.0",
+    "fs-extra": "^3.0.1",
+    "gh-pages": "^1.0.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "istanbul-instrumenter-loader": "^2.0.0",
@@ -140,13 +140,13 @@
     "style-loader": "^0.14.1",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "1.1.2",
-    "tslint": "^4.0.2",
-    "tslint-config-swimlane": "^2.0.1",
+    "tslint": "^5.4.3",
+    "tslint-config-swimlane": "^3.0.2",
     "tslint-loader": "^3.3.0",
-    "typescript": "~2.1.0",
-    "uglify-js": "^2.7.5",
+    "typescript": "^2.3.4",
+    "uglify-js": "^3.0.19",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.0",
+    "webpack": "^3.0.0",
     "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^2.2.0",
     "webpack-merge": "^4.1.0",
