--- a/package.json
+++ b/package.json
@@ -86,27 +86,28 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/platform-server": "^4.2.4",
-    "@types/d3-array": "1.1.0",
-    "@types/d3-brush": "1.0.6",
-    "@types/d3-color": "1.0.4",
-    "@types/d3-force": "1.0.6",
-    "@types/d3-format": "1.1.0",
+    "@types/core-js": "^0.9.42",
+    "@types/d3-array": "^1.2.1",
+    "@types/d3-brush": "^1.0.7",
+    "@types/d3-color": "^1.0.5",
+    "@types/d3-force": "^1.0.7",
+    "@types/d3-format": "^1.2.0",
     "@types/d3-hierarchy": "1.1.0",
-    "@types/d3-interpolate": "1.1.5",
-    "@types/d3-scale": "1.0.7",
-    "@types/d3-selection": "1.0.12",
-    "@types/d3-shape": "1.0.8",
-    "@types/d3-time": "1.0.5",
-    "@types/d3-time-format": "2.0.4",
-    "@types/d3-transition": "1.0.7",
-    "@types/jasmine": "2.5.41",
+    "@types/d3-interpolate": "^1.1.6",
+    "@types/d3-scale": "^1.0.10",
+    "@types/d3-selection": "^1.1.0",
+    "@types/d3-shape": "^1.2.1",
+    "@types/d3-time": "^1.0.7",
+    "@types/d3-time-format": "^2.0.5",
+    "@types/d3-transition": "^1.1.0",
+    "@types/jasmine": "^2.5.53",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.7.0",
-    "awesome-typescript-loader": "~3.1.2",
+    "awesome-typescript-loader": "^3.2.3",
     "clean-webpack-plugin": "^0.1.15",
     "codelyzer": "^3.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
-    "core-js": "2.4.1",
+    "core-js": "^2.5.0",
     "cpx": "^1.5.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.27.3",
@@ -116,39 +117,40 @@
     "fs-extra": "^3.0.1",
     "gh-pages": "^1.0.0",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.26.0",
+    "html-webpack-plugin": "^2.30.1",
     "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.4.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "jasmine-core": "^2.7.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.2",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.1",
-    "node-sass": "^4.3.0",
+    "karma-webpack": "^2.0.4",
+    "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.1",
     "postcss": "^5.2.11",
     "postcss-loader": "^1.2.2",
     "raw-loader": "^0.5.1",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
-    "rxjs": "^5.0.3",
+    "rxjs": "^5.4.3",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.14.1",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "1.1.2",
+    "tslib": "^1.7.1",
     "tslint": "^5.4.3",
     "tslint-config-swimlane": "^3.0.2",
-    "tslint-loader": "^3.3.0",
-    "typescript": "^2.3.4",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.4.2",
     "uglify-js": "^3.0.19",
     "url-loader": "^0.5.7",
     "webpack": "^3.0.0",
     "webpack-combine-loaders": "^2.0.3",
-    "webpack-dev-server": "^2.2.0",
+    "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0",
     "zone.js": "^0.8.4"
