--- a/package.json
+++ b/package.json
@@ -71,21 +71,22 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts-dag#readme",
   "peerDependencies": {
-    "@angular/common": "~4.0.1",
-    "@angular/core": "~4.0.1",
+    "@angular/animations": "^4.0.1 | ^5.0.0",
+    "@angular/common": "^4.0.1 | ^5.0.0",
+    "@angular/core": "^4.0.1 | ^5.0.0",
     "d3": "^4.7.4",
     "rxjs": "^5.0.3"
   },
   "devDependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/platform-server": "^4.2.4",
+    "@angular/animations": "^4.4.6",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/platform-server": "^4.4.6",
     "@types/core-js": "^0.9.42",
     "@types/d3-array": "^1.2.1",
     "@types/d3-brush": "^1.0.7",
@@ -156,7 +157,7 @@
     "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "@swimlane/ngx-charts": "^5.0.0",
+    "@swimlane/ngx-charts": "^6.1.0",
     "dagre": "^0.7.4"
   }
 }
