--- a/package.json
+++ b/package.json
@@ -72,52 +72,43 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts-dag#readme",
   "peerDependencies": {
-    "@angular/animations": "^4.0.1 | ^5.0.0",
-    "@angular/common": "^4.0.1 | ^5.0.0",
-    "@angular/core": "^4.0.1 | ^5.0.0",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/core": "^5.0.0",
     "d3": "^4.7.4",
     "rxjs": "^5.0.3"
   },
   "devDependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/platform-server": "^4.4.6",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
     "@types/core-js": "^0.9.42",
-    "@types/d3-array": "^1.2.1",
-    "@types/d3-brush": "^1.0.7",
-    "@types/d3-color": "^1.0.5",
-    "@types/d3-force": "^1.0.7",
-    "@types/d3-format": "^1.2.0",
-    "@types/d3-hierarchy": "1.1.0",
-    "@types/d3-interpolate": "^1.1.6",
-    "@types/d3-scale": "^1.0.10",
     "@types/d3-selection": "^1.1.0",
     "@types/d3-shape": "^1.2.1",
-    "@types/d3-time": "^1.0.7",
-    "@types/d3-time-format": "^2.0.5",
-    "@types/d3-transition": "^1.1.0",
-    "@types/jasmine": "^2.5.53",
+    "@types/jasmine": "^2.8.2",
+    "@types/node": "^8.0.53",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.7.0",
-    "awesome-typescript-loader": "^3.2.3",
+    "awesome-typescript-loader": "^3.4.0",
     "clean-webpack-plugin": "^0.1.15",
-    "codelyzer": "^3.0.0-beta.4",
-    "copy-webpack-plugin": "^4.0.0",
+    "codelyzer": "^4.0.1",
+    "copy-webpack-plugin": "^4.2.1",
     "core-js": "^2.5.0",
     "cpx": "^1.5.0",
-    "cross-env": "^5.0.1",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.27.3",
-    "d3": "^4.7.4",
+    "d3-selection": "^1.1.0",
+    "d3-shape": "^1.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.1",
     "fs-extra": "^3.0.1",
-    "gh-pages": "^1.0.0",
+    "gh-pages": "^1.1.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.30.1",
     "istanbul-instrumenter-loader": "^2.0.0",
@@ -126,39 +117,39 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.3",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
-    "node-sass": "^4.5.3",
-    "npm-run-all": "^4.0.1",
-    "postcss": "^5.2.11",
+    "karma-webpack": "^2.0.6",
+    "node-sass": "^4.7.1",
+    "npm-run-all": "^4.1.2",
+    "postcss": "^5.2.18",
     "postcss-loader": "^1.2.2",
     "raw-loader": "^0.5.1",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.2",
     "sass-loader": "^6.0.3",
-    "source-map-loader": "^0.2.0",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.14.1",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "1.1.2",
-    "tslib": "^1.7.1",
-    "tslint": "^5.4.3",
-    "tslint-config-swimlane": "^3.0.2",
+    "tslib": "^1.8.0",
+    "tslint": "^5.8.0",
+    "tslint-config-swimlane": "^3.0.4",
     "tslint-loader": "^3.5.3",
-    "typescript": "^2.4.2",
-    "uglify-js": "^3.0.19",
+    "typescript": "^2.6.1",
+    "uglify-js": "^3.1.10",
     "url-loader": "^0.5.7",
-    "webpack": "^3.0.0",
+    "webpack": "^3.8.1",
     "webpack-combine-loaders": "^2.0.3",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-merge": "^4.1.0",
+    "webpack-dev-server": "^2.9.4",
+    "webpack-merge": "^4.1.1",
     "webpack-notifier": "^1.5.0",
     "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "@swimlane/ngx-charts": "^6.1.0",
+    "@swimlane/ngx-charts": "^7.0.1",
     "dagre": "^0.7.4"
   }
 }
