--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     "tslint": "^5.8.0",
     "tslint-config-swimlane": "^3.0.4",
     "tslint-loader": "^3.5.3",
-    "typescript": "^2.4.2",
+    "typescript": "~2.4.2",
     "uglify-js": "^3.1.10",
     "url-loader": "^0.5.7",
     "webpack": "^3.8.1",
