--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
     "d3-transition": "^1.1.1",
-    "dagre": "^0.7.4"
+    "dagre": "^0.7.4",
+    "transformation-matrix": "^1.7.0"
   }
 }
