--- a/package.json
+++ b/package.json
@@ -31,13 +31,11 @@
     "start": "webpack-dev-server",
     "start:hmr": "webpack-dev-server --env.HMR",
     "release": "npm-run-all build:release",
-    "package":
-      "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
+    "package": "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
     "package:ts": "tsc --outDir release",
     "package:aot": "ngc -p tsconfig-aot.json",
     "package:replace-scss": "node ./config/replace-scss.js",
-    "package:minify":
-      "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
+    "package:minify": "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
     "deploy": "node ./config/deploy.js",
     "profile": "NODE_ENV=production webpack --profile --json > dist/stats.json"
   },
@@ -66,7 +64,11 @@
     "visualization",
     "tree"
   ],
-  "authors": ["Marjan Georgiev", "Austin McDaniel", "Jayson Harshbarger"],
+  "authors": [
+    "Marjan Georgiev",
+    "Austin McDaniel",
+    "Jayson Harshbarger"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/swimlane/ngx-graph/issues"
@@ -79,15 +81,15 @@
     "rxjs": "^5.0.3"
   },
   "devDependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/platform-server": "^5.0.0",
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/platform-server": "^6.0.0",
     "@swimlane/prettier-config-swimlane": "^0.1.1",
     "@types/core-js": "^0.9.42",
     "@types/d3-selection": "^1.2.0",
@@ -128,7 +130,7 @@
     "raw-loader": "^0.5.1",
     "replace": "^0.3.0",
     "rimraf": "^2.5.2",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.1.0",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.14.1",
@@ -139,7 +141,7 @@
     "tslint-config-prettier": "^1.12.0",
     "tslint-config-swimlane": "^3.0.4",
     "tslint-loader": "^3.5.3",
-    "typescript": "~2.4.2",
+    "typescript": "^2.7.2",
     "uglify-js": "^3.1.10",
     "url-loader": "^0.5.7",
     "webpack": "^3.8.1",
@@ -150,7 +152,8 @@
     "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "@swimlane/ngx-charts": "^7.0.1",
+    "@angular/cdk": "^6.0.1",
+    "@swimlane/ngx-charts": "^8.0.0",
     "@types/d3-transition": "^1.1.1",
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
