--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "Graph visualization for angular!",
   "main": "release/index.js",
   "module": "release/index.js",
@@ -31,11 +31,13 @@
     "start": "webpack-dev-server",
     "start:hmr": "webpack-dev-server --env.HMR",
     "release": "npm-run-all build:release",
-    "package": "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
+    "package":
+      "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
     "package:ts": "tsc --outDir release",
     "package:aot": "ngc -p tsconfig-aot.json",
     "package:replace-scss": "node ./config/replace-scss.js",
-    "package:minify": "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
+    "package:minify":
+      "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
     "deploy": "node ./config/deploy.js",
     "profile": "NODE_ENV=production webpack --profile --json > dist/stats.json"
   },
@@ -64,11 +66,7 @@
     "visualization",
     "tree"
   ],
-  "authors": [
-    "Marjan Georgiev",
-    "Austin McDaniel",
-    "Jayson Harshbarger"
-  ],
+  "authors": ["Marjan Georgiev", "Austin McDaniel", "Jayson Harshbarger"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/swimlane/ngx-graph/issues"
