--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "5.0.1",
+  "version": "5.1.0",
   "description": "Graph visualization for angular!",
   "main": "release/index.js",
   "module": "release/index.js",
@@ -31,13 +31,11 @@
     "start": "webpack-dev-server",
     "start:hmr": "webpack-dev-server --env.HMR",
     "release": "npm-run-all build:release",
-    "package":
-      "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
+    "package": "npm-run-all -s clean copy:build build:sass package:replace-scss package:aot build:package package:minify copy:styles clean:build",
     "package:ts": "tsc --outDir release",
     "package:aot": "ngc -p tsconfig-aot.json",
     "package:replace-scss": "node ./config/replace-scss.js",
-    "package:minify":
-      "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
+    "package:minify": "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
     "deploy": "node ./config/deploy.js",
     "profile": "NODE_ENV=production webpack --profile --json > dist/stats.json"
   },
@@ -66,7 +64,11 @@
     "visualization",
     "tree"
   ],
-  "authors": ["Marjan Georgiev", "Austin McDaniel", "Jayson Harshbarger"],
+  "authors": [
+    "Marjan Georgiev",
+    "Austin McDaniel",
+    "Jayson Harshbarger"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/swimlane/ngx-graph/issues"
@@ -109,12 +111,12 @@
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.1",
     "fs-extra": "^3.0.1",
-    "gh-pages": "^1.1.0",
+    "gh-pages": "^1.2.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.30.1",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "^2.7.0",
-    "karma": "^1.7.0",
+    "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
@@ -128,7 +130,7 @@
     "postcss-loader": "^1.2.2",
     "prettier": "^1.12.1",
     "raw-loader": "^0.5.1",
-    "replace": "^0.3.0",
+    "replace": "^1.0.0",
     "rimraf": "^2.5.2",
     "rxjs": "^6.1.0",
     "sass-loader": "^6.0.3",
@@ -143,7 +145,7 @@
     "tslint-loader": "^3.5.3",
     "typescript": "~2.7.2",
     "uglify-js": "^3.1.10",
-    "url-loader": "^0.5.7",
+    "url-loader": "^1.0.1",
     "webpack": "^3.8.1",
     "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^2.9.4",
