--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
   "dependencies": {
     "@swimlane/ngx-charts": "^8.0.0",
     "@types/d3-transition": "^1.1.1",
+    "d3-force": "^1.1.0",
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
     "d3-transition": "^1.1.1",
