Update to angular 7 and docspa 1.8.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,12 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "es2015",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2017", "dom"],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "paths": {
       "@swimlane/ngx-graph": ["projects/swimlane/ngx-graph/src/public_api"],
       "@swimlane/ngx-graph/*": ["projects/swimlane/ngx-graph/src/*"]
