--- a/package.json
+++ b/package.json
@@ -11,30 +11,28 @@
     "test": "npm run cypress",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-pkg": "ng build @swimlane/ngx-ui && node scripts/prep-global-styles.js",
+    "build-pkg": "ng build @swimlane/ngx-graph",
     "ci": "npm run build && start-server-and-test start http-get://localhost:4200 cypress",
-    "cypress": "cypress run",
-    "deploy": "node ./scripts/deploy-demo.js",
-    "publish": "npm publish ./dist/swimlane/ngx-ui"
+    "publish": "npm publish ./dist/swimlane/ngx-graph"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/elements": "^6.1.7",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
+    "@angular/animations": "^7.1.0",
+    "@angular/common": "^7.1.0",
+    "@angular/compiler": "^7.1.0",
+    "@angular/core": "^7.1.0",
+    "@angular/elements": "^7.2.0",
+    "@angular/forms": "^7.1.0",
+    "@angular/http": "^7.1.0",
+    "@angular/platform-browser": "^7.1.0",
+    "@angular/platform-browser-dynamic": "^7.1.0",
+    "@angular/router": "^7.1.0",
     "@ngx-loading-bar/core": "^2.2.0",
     "@ngx-loading-bar/http-client": "^2.2.0",
     "@stackblitz/sdk": "^1.2.0",
-    "@swimlane/docspa-core": "^1.1.1",
-    "@swimlane/docspa-remark-preset": "^1.0.3",
+    "@swimlane/docspa-core": "^1.8.0",
+    "@swimlane/docspa-remark-preset": "^1.3.0",
     "@swimlane/ngx-charts": "^10.0.0",
-    "@webcomponents/custom-elements": "^1.2.0",
+    "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^2.5.4",
     "d3-dispatch": "^1.0.5",
     "d3-force": "^2.0.0",
@@ -43,29 +41,34 @@
     "d3-timer": "^1.0.9",
     "d3-transition": "^1.1.3",
     "dagre": "^0.8.4",
-    "deepmerge": "^2.1.1",
-    "ngx-logger": "^3.0.5",
+    "deepmerge": "^2.2.1",
+    "ngx-logger": "^3.3.8",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "quick-lru": "^1.1.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.3",
+    "smoothscroll-polyfill": "^0.4.3",
     "transformation-matrix": "^1.14.1",
     "url-resolve": "^1.0.0",
-    "vfile-reporter": "^5.0.0",
+    "vfile": "^3.0.0",
+    "vfile-reporter": "^5.1.1",
     "webcola": "^3.3.8",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular-devkit/build-ng-packagr": "~0.7.0",
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@swimlane/prettier-config-swimlane": "^0.1.1",
+    "@angular/cli": "~7.1.0",
+    "@angular/compiler-cli": "^7.1.0",
+    "@angular/language-service": "^7.1.0",
+    "@swimlane/prettier-config-swimlane": "^1.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "@types/mdast": "^3.0.1",
+    "@types/node": "~8.10.20",
+    "@types/unist": "^2.0.2",
+    "@types/vfile": "^3.0.2",
+    "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^3.0.0",
@@ -74,14 +77,14 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^3.0.0",
-    "prettier": "^1.12.1",
+    "prettier": "^1.15.3",
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
-    "tslint": "~5.9.1",
-    "tslint-config-prettier": "^1.12.0",
-    "tslint-config-swimlane": "^3.0.4",
-    "typescript": "~2.7.2"
+    "tslint": "~5.11.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-config-swimlane": "^4.0.0",
+    "typescript": "~3.1.1"
   }
 }
