--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -18,8 +18,10 @@
     "directed acyclic graph",
     "dag"
   ],
+  "Author": [
+    "Marjan Georgiev"
+  ],
   "Contributors": [
-    "Marjan Georgiev",
     "Assaf Shemesh",
     "Isaac Mann"
   ],
@@ -29,14 +31,14 @@
   },
   "homepage": "https://github.com/swimlane/ngx-graph#readme",
   "peerDependencies": {
-    "@angular/animations": ">= 6.0.0",
-    "@angular/common": ">= 6.0.0",
-    "@angular/core": ">= 6.0.0",
-    "@angular/cdk": ">= 6.0.0",
-    "rxjs": ">= 6.0.0"
+    "@angular/animations": "7.x",
+    "@angular/common": "7.x",
+    "@angular/core": "7.x",
+    "@angular/cdk": "7.x",
+    "rxjs": "6.x"
   },
   "dependencies": {
-    "@swimlane/ngx-charts": "^8.0.0",
+    "@swimlane/ngx-charts": "^10.0.0",
     "d3-dispatch": "^1.0.3",
     "d3-force": "^1.1.0",
     "d3-selection": "^1.2.0",
