--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "6.0.0",
+  "version": "6.0.0-rc.1",
   "description": "Graph visualization for angular",
   "repository": {
     "type": "git",
@@ -18,10 +18,9 @@
     "directed acyclic graph",
     "dag"
   ],
-  "Author": [
-    "Marjan Georgiev"
-  ],
-  "Contributors": [
+  "author": "Swimlane",
+  "maintainers": [
+    "Marjan Georgiev",
     "Assaf Shemesh",
     "Isaac Mann"
   ],
