--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -30,10 +30,10 @@
   },
   "homepage": "https://github.com/swimlane/ngx-graph#readme",
   "peerDependencies": {
-    "@angular/animations": "7.x",
-    "@angular/common": "7.x",
-    "@angular/core": "7.x",
-    "@angular/cdk": "7.x",
+    "@angular/animations": "6.x | 7.x",
+    "@angular/common": "6.x | 7.x",
+    "@angular/core": "6.x | 7.x",
+    "@angular/cdk": "6.x | 7.x",
     "rxjs": "6.x"
   },
   "dependencies": {
