--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^7.1.0",
     "@angular/common": "^7.1.0",
     "@angular/compiler": "^7.1.0",
     "@angular/core": "^7.1.0",
@@ -63,6 +62,9 @@
     "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "^7.1.0",
     "@swimlane/prettier-config-swimlane": "^1.0.0",
+    "@types/d3-selection": "^1.4.1",
+    "@types/d3-shape": "^1.3.1",
+    "@types/d3-transition": "^1.1.4",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.1",
