--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^2.5.4",
     "d3-dispatch": "^1.0.5",
+    "d3-ease": "^1.0.5",
     "d3-force": "^2.0.0",
     "d3-selection": "^1.3.2",
     "d3-shape": "^1.2.2",
