--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.7",
-    "@angular-devkit/build-ng-packagr": "~0.7.0",
-    "@angular/cli": "~7.1.0",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular-devkit/build-ng-packagr": "^0.13.8",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "^7.1.0",
     "@swimlane/prettier-config-swimlane": "^1.0.0",
@@ -77,12 +77,12 @@
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^3.0.0",
+    "ng-packagr": "^5.1.0",
     "prettier": "^1.15.3",
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
