--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "6.0.0-rc.6",
+  "version": "6.0.0",
   "description": "Graph visualization for angular",
   "repository": {
     "type": "git",
@@ -30,10 +30,10 @@
   },
   "homepage": "https://github.com/swimlane/ngx-graph#readme",
   "peerDependencies": {
-    "@angular/animations": "6.x | 7.x",
-    "@angular/common": "6.x | 7.x",
-    "@angular/core": "6.x | 7.x",
-    "@angular/cdk": "6.x | 7.x",
+    "@angular/animations": "6.x | 7.x | 8.x",
+    "@angular/common": "6.x | 7.x | 8.x",
+    "@angular/core": "6.x | 7.x | 8.x",
+    "@angular/cdk": "6.x | 7.x | 8.x",
     "rxjs": "6.x"
   },
   "dependencies": {
