Add demo deploy script

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build-pkg": "ng build @swimlane/ngx-graph",
+    "build-docs": "cross-env NODE_ENV=production ng build --prod --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
+    "predeploy-docs": "npm run build-docs ",
+    "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
     "ci": "npm run build && start-server-and-test start http-get://localhost:4200 cypress",
     "publish": "npm publish projects/dist/ngx-graph"
   },
@@ -74,7 +77,9 @@
     "@types/node": "~8.10.20",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^3.0.2",
+    "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "~4.3.0",
+    "cross-env": "^5.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
