--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npm run cypress",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-pkg": "ng build @swimlane/ngx-graph && cp README.md projects/dist/ngx-graph/README.md",
+    "build-pkg": "ng build @swimlane/ngx-graph && npm run copy-files",
+    "copy-files": "cp README.md projects/dist/ngx-graph/README.md && cp LICENSE projects/dist/ngx-graph/LICENSE",
     "build-docs": "cross-env NODE_ENV=production ng build --prod --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
     "predeploy-docs": "npm run build-docs ",
     "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
