--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "5.5.0",
+  "version": "5.6.0",
   "description": "Graph visualization for angular!",
   "main": "release/index.js",
   "module": "release/index.js",
@@ -132,7 +132,7 @@
     "raw-loader": "^0.5.1",
     "replace": "^1.0.0",
     "rimraf": "^2.5.2",
-    "rxjs": "^6.1.0",
+    "rxjs": "~6.3.3",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.14.1",
