--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
-    "@ngx-loading-bar/core": "^2.2.0",
-    "@ngx-loading-bar/http-client": "^2.2.0",
+    "@ngx-loading-bar/core": "^4.2.0",
+    "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
     "@swimlane/docspa-core": "^4.0.0",
     "@swimlane/docspa-remark-preset": "^2.0.1",
@@ -41,7 +41,7 @@
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.1",
     "@types/d3-transition": "^1.1.4",
-    "@webcomponents/custom-elements": "^1.2.1",
+    "@webcomponents/custom-elements": "^1.3.1",
     "core-js": "^2.5.4",
     "d3-dispatch": "^1.0.5",
     "d3-ease": "^1.0.5",
@@ -51,11 +51,11 @@
     "d3-timer": "^1.0.9",
     "d3-transition": "^1.1.3",
     "dagre": "^0.8.4",
-    "deepmerge": "^2.2.1",
-    "ngx-logger": "^3.3.8",
+    "deepmerge": "^4.2.2",
+    "ngx-logger": "^4.0.8",
     "path": "^0.12.7",
     "process": "^0.11.10",
-    "quick-lru": "^1.1.0",
+    "quick-lru": "^4.0.1",
     "rxjs": "^6.5.4",
     "smoothscroll-polyfill": "^0.4.3",
     "transformation-matrix": "^1.15.3",
@@ -71,16 +71,16 @@
     "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
-    "@swimlane/prettier-config-swimlane": "^1.0.0",
+    "@swimlane/prettier-config-swimlane": "^2.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/mdast": "^3.0.1",
-    "@types/node": "~8.10.20",
+    "@types/mdast": "^3.0.3",
+    "@types/node": "^13.1.4",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^3.0.2",
     "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "~5.0.1",
-    "cross-env": "^5.2.0",
+    "cross-env": "^6.0.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
@@ -89,7 +89,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^5.7.1",
-    "prettier": "^1.15.3",
+    "prettier": "^1.19.1",
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tslib": "^1.9.0",
