--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
-    "@swimlane/docspa-core": "^4.2.0",
-    "@swimlane/docspa-remark-preset": "^2.0.1",
+    "@swimlane/docspa-core": "^5.0.0-7",
+    "@swimlane/docspa-remark-preset": "^5.0.0-0",
     "@swimlane/docspa-stackblitz": "^4.0.0",
     "@swimlane/ngx-charts": "^12.0.1",
     "@types/d3-ease": "^1.0.8",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.1",
     "@types/d3-transition": "^1.1.4",
+    "@ungap/global-this": "^0.3.1",
     "@webcomponents/custom-elements": "^1.3.1",
     "core-js": "^2.5.4",
     "d3-dispatch": "^1.0.5",
@@ -58,6 +59,7 @@
     "quick-lru": "^4.0.1",
     "rxjs": "^6.5.4",
     "smoothscroll-polyfill": "^0.4.3",
+    "throttleit": "^1.0.0",
     "transformation-matrix": "^1.15.3",
     "tslib": "^1.10.0",
     "url-resolve": "^1.0.0",
