--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
-    "@swimlane/docspa-core": "^5.0.0-7",
-    "@swimlane/docspa-remark-preset": "^5.0.0-0",
+    "@swimlane/docspa-core": "^5.0.0",
+    "@swimlane/docspa-remark-preset": "^5.0.0",
     "@swimlane/docspa-stackblitz": "^4.0.0",
     "@swimlane/ngx-charts": "^13.0.1",
     "@types/d3-ease": "^1.0.8",
