--- a/package.json
+++ b/package.json
@@ -71,9 +71,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.8",
-    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.8",
-    "@angular/cli": "^9.0.0-rc.8",
+    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular-devkit/build-ng-packagr": "~0.900.5",
+    "@angular/cli": "^9.0.5",
     "@angular/compiler-cli": "^9.0.5",
     "@angular/language-service": "^9.0.5",
     "@babel/core": "^7.7.7",
@@ -94,7 +94,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^9.0.0-rc.7",
+    "ng-packagr": "^9.0.3",
     "prettier": "^1.19.1",
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
