--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "predeploy-docs": "npm run build-docs ",
     "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
     "ci": "npm run build && start-server-and-test start http-get://localhost:4200 cypress",
-    "publish": "npm publish projects/dist/ngx-graph --tag vnext"
+    "publish": "npm publish projects/dist/ngx-graph"
   },
   "license": "MIT",
   "dependencies": {
