--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "npm run build-pkg && ng build",
-    "package": "npm run build-pkg",
-    "unit-test": "npm run build-pkg && ng test",
-    "test": "npm run cypress",
+    "build": "ng build",
+    "build:lib": "ng build @swimlane/ngx-graph",
+    "build:lib:prod": "ng build @swimlane/ngx-graph --prod",
+    "test": "npm run lint",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-pkg": "ng build @swimlane/ngx-graph && npm run copy-files",
+    "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,scss,css,md,json}\"",
+    "prettier:ci": "prettier --check  \"{src,projects}/**/*.{js,ts,scss,css,md,json}\"",
     "copy-files": "cp README.md projects/dist/ngx-graph/README.md && cp LICENSE projects/dist/ngx-graph/LICENSE",
     "build-docs": "cross-env NODE_ENV=production ng build --prod --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
-    "predeploy-docs": "npm run build-docs ",
+    "predeploy-docs": "npm run build-docs",
     "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
-    "ci": "npm run build && start-server-and-test start http-get://localhost:4200 cypress",
+    "ci": "run-s lint prettier:ci",
+    "package": "ng build @swimlane/ngx-graph && npm run copy-files",
     "publish": "npm publish projects/dist/ngx-graph"
   },
   "license": "MIT",
@@ -99,6 +101,7 @@
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "protractor": "^5.4.3",
+    "start-server-and-test": "^1.10.11",
     "ts-node": "^8.8.2",
     "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.17.0",
