Update publish scripts

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "predeploy-docs": "npm run build-docs",
     "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
     "ci": "run-s lint prettier:ci",
-    "package": "ng build @swimlane/ngx-graph && npm run copy-files",
-    "publish": "npm publish projects/dist/ngx-graph"
+    "package": "run-s build:lib:prod copy-files",
+    "prepublish:lib": "npm run package",
+    "publish:lib": "npm publish projects/dist/ngx-graph"
   },
   "license": "MIT",
   "dependencies": {
