Add Minimap feature (#324)
* Implement minimap prototype

* mini map surrounding  code, contains the following:

1. input binding for enable\disable
2. New template for mini map nodes.
3. Input binding for min map max width
4. Input binding for location of the map - for now supporting only Upper left and Upper right

* Remove minimap transform calculation from html

* Update minimap implementation

* Fixes

* Add click to pan feature

* Clean up

* Add inputs to main docs

Co-authored-by: assafsun <assaf.sun@gmil.com>
Co-authored-by: ashem <ashem@microsoft.com>

--- a/angular.json
+++ b/angular.json
@@ -126,9 +126,9 @@
           },
           "configurations": {
             "production": {
-              "project": "projects/swimlane/ngx-graph/ng-package.prod.json"
-            ,              "tsConfig": "projects/swimlane/ngx-graph/tsconfig.lib.prod.json"
-}
+              "project": "projects/swimlane/ngx-graph/ng-package.prod.json",
+              "tsConfig": "projects/swimlane/ngx-graph/tsconfig.lib.prod.json"
+            }
           }
         },
         "test": {
