--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:lib": "ng build @obi4wan/ngx-graph",
-    "build:lib:prod": "ng build @obi4wan/ngx-graph --prod",
+    "build:lib": "ng build @swimlane/ngx-graph",
+    "build:lib:prod": "ng build @swimlane/ngx-graph --prod",
     "test": "npm run lint",
     "lint": "ng lint",
     "e2e": "ng e2e",
