--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^10.1.2",
+    "@angular/animations": "^11.0.4",
     "@angular/cdk": "^10.2.1",
-    "@angular/common": "^10.1.2",
-    "@angular/compiler": "^10.1.2",
-    "@angular/core": "^10.1.2",
-    "@angular/elements": "^10.1.2",
-    "@angular/forms": "^10.1.2",
-    "@angular/platform-browser": "^10.1.2",
-    "@angular/platform-browser-dynamic": "^10.1.2",
-    "@angular/router": "^10.1.2",
+    "@angular/common": "^11.0.4",
+    "@angular/compiler": "^11.0.4",
+    "@angular/core": "^11.0.4",
+    "@angular/elements": "^11.0.4",
+    "@angular/forms": "^11.0.4",
+    "@angular/platform-browser": "^11.0.4",
+    "@angular/platform-browser-dynamic": "^11.0.4",
+    "@angular/router": "^11.0.4",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
@@ -77,31 +77,30 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.2",
-    "@angular-devkit/build-ng-packagr": "~0.1001.2",
-    "@angular/cli": "^10.1.2",
-    "@angular/compiler-cli": "^10.1.2",
-    "@angular/language-service": "^10.1.2",
+    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular/cli": "^11.0.4",
+    "@angular/compiler-cli": "^11.0.4",
+    "@angular/language-service": "^11.0.4",
     "@babel/core": "^7.7.7",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
     "@types/node": "^12.12.34",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
     "husky": "^4.2.4",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.1.0",
+    "ng-packagr": "^11.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
@@ -112,7 +111,7 @@
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "~4.0.5"
   },
   "browser": {
     "fs": false,
