--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "7.2.0",
+  "version": "8.0.0-rc.1",
   "description": "Graph visualization for angular",
   "repository": {
     "type": "git",
@@ -21,8 +21,7 @@
   "author": "Swimlane",
   "maintainers": [
     "Marjan Georgiev",
-    "Assaf Shemesh",
-    "Isaac Mann"
+    "Assaf Shemesh"
   ],
   "license": "MIT",
   "bugs": {
@@ -30,10 +29,10 @@
   },
   "homepage": "https://github.com/swimlane/ngx-graph#readme",
   "peerDependencies": {
-    "@angular/animations": "6.x || 7.x || 8.x || 9.x || 10.x",
-    "@angular/common": "6.x || 7.x || 8.x || 9.x || 10.x",
-    "@angular/core": "6.x || 7.x || 8.x || 9.x || 10.x",
-    "@angular/cdk": "6.x || 7.x || 8.x || 9.x || 10.x",
+    "@angular/animations": "9.x || 10.x || 11.x",
+    "@angular/common": "9.x || 10.x || 11.x",
+    "@angular/core": "9.x || 10.x || 11.x",
+    "@angular/cdk": "9.x || 10.x || 11.x",
     "rxjs": "6.x"
   },
   "dependencies": {
